<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile_not_authorized"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.phone_number_enter.PhoneNumberEnterProfileFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textPhoneLabelHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginEnd="@dimen/base_margin"
        android:fontFamily="@font/alegreya_bold"
        android:gravity="center"
        android:text="@string/type_phone_number"
        android:textColor="@color/colorBlack"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLabelAboutService"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:layout_marginEnd="@dimen/base_margin"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/you_can_access_to_service"
        android:textColor="@color/squirrel"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPhoneLabelHeader" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:hint="@string/empty_text"
        app:boxBackgroundColor="@color/colorWhite"
        app:endIconDrawable="@drawable/ic_cross_with_padding"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorPrimaryDark"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLabelAboutService">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890 +()-"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/small_margin"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="24" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        style="@style/small_comment"
        android:text="@string/we_will_send_you_sms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberInputLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".65" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueButton"
        style="@style/big_button_1_line"
        android:text="@string/Continue"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/small_comment"
        android:layout_marginBottom="8dp"
        android:text="@string/you_accept_condition"
        app:layout_constraintBottom_toTopOf="@id/linkedText1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/linkedText1"
        style="@style/small_comment"
        android:layout_marginBottom="4dp"
        android:text="@string/terms_conditions"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/linkedText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/linkedText2"
        style="@style/small_comment"
        android:layout_marginBottom="16dp"
        android:text="@string/privacy_policy"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>