<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentProfileNotAuthorized"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotAuthorizedProfileFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/base_margin"
        android:cropToPadding="true"
        android:src="@drawable/girl_01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/authOrRegisterButton"
        android:text="@string/auth_or_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        style="@style/big_button_1_line" />

    <TextView
        android:id="@+id/textAboutRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/base_margin"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:paddingStart="@dimen/base_margin"
        android:paddingEnd="@dimen/base_margin"
        android:text="@string/about_registration"
        android:textAlignment="center"
        android:textColor="@color/squirrel"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authOrRegisterButton" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:backgroundTint="@color/colorSilver"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginBottom="@dimen/very_big_margin"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageAuthorization" />

    <ImageView
        android:id="@+id/imageAuthorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:src="@drawable/ic_about"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app"
        android:fontFamily="@font/montserrat"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="@+id/imageAuthorization"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@+id/imageAuthorization" />

    <ImageView
        android:id="@+id/imageArrowRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/base_margin"
        android:tint="@color/cottonSeed"
        android:src="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="@+id/aboutText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/aboutText" />

</androidx.constraintlayout.widget.ConstraintLayout>